Forbedringer etter code review